--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+# setup of environment variables
+/.env
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
